@@ -1,6 +1,6 @@
 /************************************************************************
 **
-**  Copyright (C) 2015-2020 Kevin B. Hendricks, Stratford ON
+**  Copyright (C) 2015-2023 Kevin B. Hendricks, Stratford ON
 **  Copyright (C) 2013      John Schember <john@nachtimwald.com>
 **  Copyright (C) 2009-2011 Strahinja Markovic  <strahinja.markovic@gmail.com>
 **
@@ -130,6 +130,11 @@ public:
      */
     QList<MetaEntry> GetDCMetadata() const;
 
+    /**
+     * Returns list of any Media Overlay Active Class Selctors if defined in OPF metadata
+     */
+    QStringList GetMediaOverlayActiveClassSelectors() const;
+    
     /**
      * Returns the values for a specific dc: metadata name.
      *
